# Cortex

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLUSTER_IMPLEMENTATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  config.example.yaml  docker-compose.multi-probe.yml  docker-compose.yml  pyproject.toml  requirements.txt  spec01.md
.github/workflows/: ci.yml
.intent-engine/: project.db-shm  project.db-wal
.serena/: project.yml
cortex/common/: cache.py  intent_recorder.py  logging_config.py  models.py  queue_manager.py  queue_sender.py  retry.py
cortex/config/: __init__.py  settings.py
cortex/monitor/: app.py  auth.py  cli.py  database.py  db_manager.py  dependencies.py  websocket_manager.py
cortex/probe/: app.py  classifier.py  claude_executor.py  cli.py  executor.py  fixer.py  scheduler.py  scheduler_service.py  system_monitor.py  websocket_manager.py
deployment/: DEPLOYMENT.md  cortex-monitor.service  cortex-probe.service  docker-entrypoint.sh
docs/: ANNOUNCEMENT_v1.0.0-rc1.md  API_CACHE_STRATEGY.md  ARCHITECTURE_UPDATE.md  CONFIGURATION.md  CONFIGURATION_UPDATE_v1.0.0-rc1.2.md  DATABASE_OPTIMIZATION.md  DOCKER_DEPLOYMENT.md  HOTFIX_v1.0.0-rc1.1.md  INSTALLATION.md  INTEGRATION_VALIDATION_REPORT.md  INTENT_ENGINE_EXPLAINED.md  LOGGING_CONFIGURATION.md  MULTI_PROBE_SETUP.md  PHASE3_COMPLETION_SUMMARY.md  PHASE5_COMPLETION_SUMMARY.md  QUICK_START_GUIDE.md  RELEASE_DEPLOYMENT_COMPLETE.md  RELEASE_v1.0.0-rc1_COMPLETE.md  RELEASE_v1.0.0-rc1_SUMMARY.md  ROADMAP_v1.1.0.md  TESTING.md  TROUBLESHOOTING.md  WEBSOCKET_IMPLEMENTATION.md  api.md  architecture.md  modules.md  probe_validation.md  probe_workflow.md  roadmap.md
frontend/: .env.development  Dockerfile  README.md  UI_TEST_SUITE.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
probe_workspace/: CLAUDE.md  README.md  install.sh  report.json  run_probe.sh  test_probe.sh
probe_workspace/inspections/: TEMPLATE.md  cpu.md  disk_space.md  memory.md  services.md
probe_workspace/output/: cpu.json  cpu_check.json  cpu_metrics.json  cpu_result.json  cpu_results.json  critical_report.json  disk.json  disk_check.json  disk_metrics.json  disk_result.json  disk_results.json  inspection_summary.md  inspection_summary.txt  memory.json  memory_check.json  memory_metrics.json  memory_result.json  memory_results.json  metrics.json  report.json  services_results.json  test_report.json  warning_report.json
probe_workspace/tools/: check_cpu.py  check_disk.py  (+5 more)
scripts/: backup_db.py  cleanup_config_yaml_refs.py  fix_python310_compat.py  init_auth.py  install.sh  integration_test.sh  setup_env.py  verify_probe.sh
tests/: E2E_TEST_DESIGN.md  conftest.py  test_auth.py  test_cluster_integration.py  test_cluster_manual.py  test_config_loading.py  test_e2e_intent_engine.py  test_e2e_probe_monitor.py  test_heartbeat_manual.py  test_intent_recorder.py  test_intents_api.py  test_monitor_alert_aggregator.py  test_monitor_api.py  test_monitor_database.py  test_monitor_decision_engine.py  test_monitor_integration.py
(+38 files in other folders)
